--- a/ExcelsisV2/app/theme/app.core.scss
+++ b/ExcelsisV2/app/theme/app.core.scss
@@ -14,3 +14,5 @@
 @import "../pages/exams/exams.scss";
 
 @import "../pages/assessments/assessments.scss";
+
+@import "../pages/profile/profile.scss";
